BUGFIX: Fix unwanted white space between elements

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,8 @@ img {
 
 .section2 {
   margin: auto;
-  margin-block-start: 0px;
   width: 75%;
-  border: 0px solid gray;
+  border: 1px solid transparent;
   background-color: rgb(236, 235, 235);
   box-sizing: border-box;
 }
@@ -24,7 +23,7 @@ img {
 .section3 {
   margin: auto;
   width: 75%;
-  border: 0px solid gray;
+  border: 1px solid transparent;
   background-color: rgb(250, 250, 250);
   box-sizing: border-box;
 }
